Switch blockly to google

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/google/closure-library.git
 [submodule "blockly"]
 	path = blockly
-	url = https://github.com/rachel-fenichel/blockly.git
+	url = https://github.com/google/blockly.git
 [submodule "scratch-blocks"]
 	path = scratch-blocks
 	url = https://github.com/rachel-fenichel/scratch-blocks.git
